--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/captainsafia/fortuity#readme",
   "dependencies": {
-    "request": "^2.81.0"
+    "data": "^0.6.1",
+    "fs": "0.0.1-security",
+    "request": "^2.88.2",
+    "str": "^1.2.3",
+    "string": "^3.3.3"
   }
 }
